--- a/style/index.css
+++ b/style/index.css
@@ -12,16 +12,15 @@ body .home_header {
   font-family: var(--fa-style-family, "Font Awesome 6 Free");
 }
 body .home_header_inner {
-  display: grid;
-  grid-template-columns: 0.5fr 1fr;
-  justify-content: center;
+  padding-inline: 2rem;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 body .home_header_inner_right {
   color: #fff;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 body .home_header_inner_right i {
   font-size: 1.4rem;
@@ -33,6 +32,16 @@ body .home_header_inner_left h6 {
   padding: 0;
   text-align: left;
   color: #fff;
+}
+body .home_header_inner_left_switch i {
+  border: 1px solid;
+  padding: 0.5rem;
+  font-weight: bold;
+  font-size: 1.4rem;
+  color: #ffbe34;
+}
+body .home_header_inner_left_inner {
+  display: none;
 }
 body .home_header_inner_left_inner i {
   font-size: 1.4rem;
@@ -69,11 +78,12 @@ body .home_header_inner_left_inner_phone_inner h6 {
 }
 body .home_hero {
   padding-inline: 3.3rem;
+  display: none;
   background-color: #000000;
   opacity: 0.6;
 }
-body .home_hero.remove {
-  display: none;
+body .home_hero.show {
+  display: block;
 }
 body .home_hero i {
   color: #ffffff;
@@ -89,20 +99,14 @@ body .home_hero h6 {
   margin: 0;
   padding: 0;
 }
-body .home_hero.enhance {
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-}
 body .home_hero_inner {
-  width: 100%;
-  display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-block: 0.5rem;
 }
 body .home_hero_inner ul {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  width: 100%;
+  text-align: center;
   gap: 1rem;
 }
 body .home_hero_inner ul li {
@@ -111,16 +115,7 @@ body .home_hero_inner ul li {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 body .home_hero_inner_right {
-  display: flex;
-  gap: 2rem;
-  align-items: center;
-}
-body .home_hero_inner_right_button button {
-  height: 100%;
-  margin: 0;
-  padding: 1rem;
-  border-radius: 0;
-  border: none;
+  display: none;
 }
 body .home_hero_inner_left i {
   font-size: 0.5rem;
@@ -132,10 +127,23 @@ body .home_hero_inner_left li {
   cursor: pointer;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
-body .home_hero_inner_left li:nth-child(3) {
-  display: flex;
-  align-items: center;
-  gap: 0.2rem;
+@media screen and (min-width: 992px) {
+  body .home_header {
+    padding-block: 2rem;
+  }
+  body .home_header_inner_left_inner {
+    display: flex;
+    gap: 2rem;
+  }
+  body .home_header_inner_left_inner_clock_inner_text {
+    display: none;
+  }
+  body .home_header_inner_left_inner_envelope_inner_text {
+    display: none;
+  }
+  body .home_header_inner_left_inner_phone_inner_text {
+    display: none;
+  }
 }
 @media screen and (min-width: 1200px) {
   body .home_header {
@@ -158,45 +166,33 @@ body .home_hero_inner_left li:nth-child(3) {
     color: #ffbe34;
     margin-inline-end: 0.4rem;
   }
-  body .home_header_inner_left {
-    display: flex;
-    gap: 2rem;
-  }
-  body .home_header_inner_left i {
-    font-size: 1.4rem;
-    color: #ffbe34;
-    padding-inline: 0.9rem;
-    padding-block: 1.2rem 0.5rem;
-    text-align: center;
-    height: 2rem;
-    width: 2rem;
-    border: 1px solid #061569;
-    border-radius: 50%;
-  }
-  body .home_header_inner_left h6 {
-    margin: 0 0 0 0.4rem;
-    padding: 0;
-    text-align: left;
-    color: #fff;
-  }
-  body .home_header_inner_left_clock_inner {
+  body .home_header_inner_left_inner_clock_inner {
     display: flex;
     align-items: center;
   }
-  body .home_header_inner_left_envelope_inner {
+  body .home_header_inner_left_inner_clock_inner_text {
+    display: block;
+  }
+  body .home_header_inner_left_inner_envelope_inner {
     display: flex;
     align-items: center;
   }
-  body .home_header_inner_left_envelope_inner h6 {
+  body .home_header_inner_left_inner_envelope_inner_text {
+    display: block;
+  }
+  body .home_header_inner_left_inner_envelope_inner h6 {
     margin: 0 0 0 0.4rem;
     padding: 0;
     text-align: left;
   }
-  body .home_header_inner_left_phone_inner {
+  body .home_header_inner_left_inner_phone_inner {
     display: flex;
     align-items: center;
   }
-  body .home_header_inner_left_phone_inner h6 {
+  body .home_header_inner_left_inner_phone_inner_text {
+    display: block;
+  }
+  body .home_header_inner_left_inner_phone_inner h6 {
     margin: 0 0 0 0.4rem;
     padding: 0;
     text-align: left;
