--- a/style/index.scss
+++ b/style/index.scss
@@ -48,7 +48,24 @@ body {
                             font-weight: bold;
                             font-size: 1.4rem;
                             color: #ffbe34;
+
                         }
+
+                        .fa-bars {
+                            &.hide {
+                                display: none;
+                            }
+
+                        }
+
+                        .fa-x {
+                            display: none;
+
+                            &.show {
+                                display: block;
+                            }
+                        }
+
                     }
 
                     &_inner {
@@ -120,39 +137,23 @@ body {
 
             opacity: 0.6;
 
-            i {
-                color: #ffffff;
-                font-weight: bold;
-                font-size: 1.4rem;
-            }
-
             h6 {
-                color: #ffffff;
-                font-weight: bold;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                font-size: small;
-                font-weight: 100;
+                font-size: 1.4rem;
                 margin: 0;
                 padding: 0;
             }
 
 
             &_inner {
-           
+
                 justify-content: space-between;
                 align-items: center;
                 padding-block: 0.5rem;
 
                 ul {
                     width: 100%;
-                   text-align: center;
-                   gap: 1rem;
-
-                    li {
-                        list-style: none;
-                        cursor: pointer;
-                        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                    }
+                    margin: 0;
+                    padding: 0;
                 }
 
                 &_right {
@@ -162,13 +163,19 @@ body {
 
                 &_left {
                     i {
-                        font-size: 0.5rem;
+                        font-size: 1rem;
                     }
 
                     li {
+                        color: #ffffff;
+                        font-size: 1.4rem;
+                        font-weight: 100;
+
+                        text-align: center;
                         list-style: none;
                         border-right: 0.00001px solid white;
-                        padding-inline-end: 1.5rem;
+                        border-left: 0.00001px solid white;
+                        // padding-inline-end: 1.5rem;
                         cursor: pointer;
                         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                     }
