responsive all round

--- a/style/index.css
+++ b/style/index.css
@@ -9,7 +9,11 @@ body .home_header {
   width: 100%;
   background-color: #091242;
   padding-block: 0.5rem;
-  font-family: var(--fa-style-family, "Font Awesome 6 Free");
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
 }
 body .home_header_inner {
   padding-inline: 2rem;
@@ -39,6 +43,7 @@ body .home_header_inner_left_switch i {
   font-weight: bold;
   font-size: 1.4rem;
   color: #ffbe34;
+  cursor: pointer;
 }
 body .home_header_inner_left_switch .fa-bars.hide {
   display: none;
@@ -52,40 +57,8 @@ body .home_header_inner_left_switch .fa-x.show {
 body .home_header_inner_left_inner {
   display: none;
 }
-body .home_header_inner_left_inner i {
-  font-size: 1.4rem;
-  color: #ffbe34;
-  padding-inline: 0.9rem;
-  padding-block: 1.2rem 0.5rem;
-  text-align: center;
-  height: 2rem;
-  width: 2rem;
-  border: 1px solid #061569;
-  border-radius: 50%;
-}
-body .home_header_inner_left_inner_clock_inner {
-  display: flex;
-  align-items: center;
-}
-body .home_header_inner_left_inner_envelope_inner {
-  display: flex;
-  align-items: center;
-}
-body .home_header_inner_left_inner_envelope_inner h6 {
-  margin: 0 0 0 0.4rem;
-  padding: 0;
-  text-align: left;
-}
-body .home_header_inner_left_inner_phone_inner {
-  display: flex;
-  align-items: center;
-}
-body .home_header_inner_left_inner_phone_inner h6 {
-  margin: 0 0 0 0.4rem;
-  padding: 0;
-  text-align: left;
-}
 body .home_hero {
+  margin-top: 4.65rem;
   padding-inline: 3.3rem;
   display: none;
   background-color: #000000;
@@ -100,8 +73,6 @@ body .home_hero h6 {
   padding: 0;
 }
 body .home_hero_inner {
-  justify-content: space-between;
-  align-items: center;
   padding-block: 0.5rem;
 }
 body .home_hero_inner ul {
@@ -119,16 +90,23 @@ body .home_hero_inner_left li {
   color: #ffffff;
   font-size: 1.4rem;
   font-weight: 100;
-  text-align: center;
   list-style: none;
-  border-right: 0.00001px solid white;
-  border-left: 0.00001px solid white;
   cursor: pointer;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 777px) {
   body .home_header {
-    padding-block: 2rem;
+    padding-block: 0.75rem;
+    position: relative;
+  }
+  body .home_header_inner_left i {
+    border: 1px solid #ffbe34;
+    padding: 1rem;
+    border-radius: 2rem;
+    font-size: 1.3rem;
+  }
+  body .home_header_inner_left_switch {
+    display: none;
   }
   body .home_header_inner_left_inner {
     display: flex;
@@ -143,8 +121,140 @@ body .home_hero_inner_left li {
   body .home_header_inner_left_inner_phone_inner_text {
     display: none;
   }
+  body .home_hero {
+    margin-top: 0rem;
+    padding-inline: 3.3rem;
+    display: block;
+    background-color: #000000;
+    opacity: 0.6;
+  }
+  body .home_hero h6 {
+    font-size: 1.4rem;
+    margin: 0;
+    padding: 0;
+  }
+  body .home_hero_inner {
+    padding-block: 0.5rem;
+  }
+  body .home_hero_inner ul {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  body .home_hero_inner_right {
+    display: none;
+  }
+  body .home_hero_inner_left i {
+    font-size: 0.5rem;
+  }
+  body .home_hero_inner_left ul {
+    display: flex;
+    gap: 2rem;
+  }
+  body .home_hero_inner_left h6 {
+    color: #ffffff;
+    font-weight: bold;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    font-size: small;
+    font-weight: 100;
+    margin: 0;
+    padding: 0;
+  }
+  body .home_hero_inner_left li {
+    border-right: 0.00001px solid white;
+    padding-inline-end: 1.5rem;
+    font-size: medium;
+    font-weight: 100;
+    color: #ffffff;
+    font-size: 1.4rem;
+    font-weight: 100;
+    list-style: none;
+    cursor: pointer;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  }
+  body .home_hero_inner_left li:nth-child(3) {
+    display: flex;
+    align-items: center;
+    gap: 0.2rem;
+  }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 992px) {
+  body .home_header {
+    padding-block: 0.75rem;
+    position: relative;
+  }
+  body .home_header_inner_left i {
+    border: 1px solid #ffbe34;
+    padding: 1rem;
+    border-radius: 2rem;
+    font-size: 1.3rem;
+  }
+  body .home_header_inner_left_switch {
+    display: none;
+  }
+  body .home_header_inner_left_inner {
+    display: flex;
+    gap: 2rem;
+  }
+  body .home_header_inner_left_inner_clock_inner_text {
+    display: none;
+  }
+  body .home_header_inner_left_inner_envelope_inner_text {
+    display: none;
+  }
+  body .home_header_inner_left_inner_phone_inner_text {
+    display: none;
+  }
+  body .home_hero {
+    margin-top: 0rem;
+    padding-inline: 3.3rem;
+    display: block;
+    background-color: #000000;
+    opacity: 0.6;
+  }
+  body .home_hero h6 {
+    font-size: 1.4rem;
+    margin: 0;
+    padding: 0;
+  }
+  body .home_hero_inner {
+    padding-block: 0.5rem;
+  }
+  body .home_hero_inner ul {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  body .home_hero_inner_right {
+    display: none;
+  }
+  body .home_hero_inner_left ul {
+    display: flex;
+    gap: 2rem;
+  }
+  body .home_hero_inner_left h6 {
+    color: #ffffff;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    font-size: small;
+    font-weight: 100;
+    margin: 0;
+    padding: 0;
+  }
+  body .home_hero_inner_left li {
+    border-right: 0.00001px solid white;
+    padding-inline-end: 1.5rem;
+    color: #ffffff;
+    font-size: 1.4rem;
+    font-weight: 100;
+    list-style: none;
+    cursor: pointer;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  }
+  body .home_hero_inner_left li i {
+    font-size: 0.5rem;
+  }
+}
+@media screen and (min-width: 1030px) {
   body .home_header {
     padding-block: 2rem;
   }
@@ -201,22 +311,10 @@ body .home_hero_inner_left li {
     background-color: #000000;
     opacity: 0.6;
   }
-  body .home_hero.remove {
-    display: none;
-  }
   body .home_hero i {
     color: #ffffff;
     font-weight: bold;
     font-size: 1.4rem;
-  }
-  body .home_hero h6 {
-    color: #ffffff;
-    font-weight: bold;
-    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-    font-size: small;
-    font-weight: 100;
-    margin: 0;
-    padding: 0;
   }
   body .home_hero.enhance {
     -webkit-backdrop-filter: blur(10px);
@@ -250,20 +348,5 @@ body .home_hero_inner_left li {
     padding: 1rem;
     border-radius: 0;
     border: none;
-  }
-  body .home_hero_inner_left i {
-    font-size: 0.5rem;
-  }
-  body .home_hero_inner_left li {
-    list-style: none;
-    border-right: 0.00001px solid white;
-    padding-inline-end: 1.5rem;
-    cursor: pointer;
-    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  }
-  body .home_hero_inner_left li:nth-child(3) {
-    display: flex;
-    align-items: center;
-    gap: 0.2rem;
   }
 }/*# sourceMappingURL=index.css.map */
